fix overflow about

--- a/css/_3.default.css
+++ b/css/_3.default.css
@@ -277,18 +277,29 @@
 }
 
 /*--------------------------------------------------------------
-# About
+# Gold
 --------------------------------------------------------------*/
-.about {
+.gold-container {
     position: relative;
     z-index: 99999;
 }
 .gold-hero {
     width: 90%;
     margin-top: -2rem;
-    /* position: absolute; */
-    z-index: 99999;
+    /* position: absolute;
+    left: 50%;
+    transform: translate(-50%); */
+    z-index: 99999999999;
 }
+/*--------------------------------------------------------------
+# About
+--------------------------------------------------------------*/
+.about {
+    /* position: relative; */
+    z-index: 99999;
+    overflow: hidden;
+}
+
 
 .booknow {
     width: 50%;
@@ -302,7 +313,9 @@
 .booknow:hover, .booknow2:hover{
     opacity: .7;
 }
-
+.about .container {
+    overflow: hidden;
+}
 /*--------------------------------------------------------------
 # Landing Cards
 --------------------------------------------------------------*/
